--- a/src/style.css
+++ b/src/style.css
@@ -4,4 +4,46 @@
 
 body {
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);;
+}
+
+.app--container {
+    display: flex;
+    flex-direction: column;
+    width: 800px;
+    height: 800px;
+    background-color: rgb(189, 189, 189);
+    border-radius: 20px;
+}
+
+.navbar--container {
+    display: flex;
+    padding: 20px;
+    margin: 10px 10px 0px 10px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(70, 179, 155);
+    border-radius: 20px 20px 0px 0px;
+}
+
+.navbar--logo {
+    width: 50px;
+    margin-right: 5px;
+}
+
+.navbar--title {
+    font-family: "Vandalism", sans-serif;
+}
+
+.cards--container {
+    display: flex;
+    background-color: white;
+    margin: 0px 10px 10px 10px;
+    height: 100%;
+    border-radius: 0px 0px 20px 20px;
+    overflow: scroll;
 }
