--- a/src/style.css
+++ b/src/style.css
@@ -41,9 +41,21 @@ body {
 
 .cards--container {
     display: flex;
+    flex-direction: column;
     background-color: white;
     margin: 0px 10px 10px 10px;
     height: 100%;
     border-radius: 0px 0px 20px 20px;
     overflow: scroll;
+}
+
+.cards {
+    display: flex;
+}
+
+.cards--images {
+    width: 125px;
+    height: 168px;
+    border-radius: 5px;
+    margin: 50px 20px 20px 30px;
 }
