--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+
 * {
     box-sizing: border-box;
 }
@@ -8,7 +10,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(255, 255, 255);;
+    background-color: rgb(0, 0, 0);;
 }
 
 .app--container {
@@ -16,7 +18,7 @@ body {
     flex-direction: column;
     width: 800px;
     height: 800px;
-    background-color: rgb(189, 189, 189);
+    background-color: rgb(71, 71, 71);
     border-radius: 20px;
 }
 
@@ -42,7 +44,7 @@ body {
 .cards--container {
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     margin: 0px 10px 10px 10px;
     height: 100%;
     border-radius: 0px 0px 20px 20px;
@@ -51,11 +53,46 @@ body {
 
 .cards {
     display: flex;
+    margin: 50px 20px 20px 30px;
+    font-family: "Inter";
 }
 
 .cards--images {
-    width: 125px;
-    height: 168px;
+    height: 200px;
+    width: auto;
     border-radius: 5px;
-    margin: 50px 20px 20px 30px;
+    margin-right: 30px;
+}
+
+.cards--location {
+    display: inline-flex;
+    align-items: center;
+}
+
+.cards--location > p {
+    font-size: 12px;
+    letter-spacing: 1.5px;
+    color: rgb(70, 179, 155);
+}
+
+.cards--location > a {
+    font-size: 12px;
+    color: rgb(141, 141, 141);
+    margin-left: 10px;
+}
+
+.cards--title {
+    margin: 0;
+}
+
+.cards--dates {
+    margin: 20px 0px 0px 0px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.cards--description {
+    margin: 10px 0px 0px 0px;
+    font-size: 12px;
+    line-height: 1.5;
 }
